middleware/rabbitmq/manifests/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_USER
              value: admin
            - name: RABBITMQ_DEFAULT_PASS
              value: admin
            - name: RABBITMQ_ERL_COOKIE
              valueFrom:
                secretKeyRef:
                  name: rabbitmq
                  key: rabbitmq-erlang-cookie
          image: 'registry.localtest.me:5001/rabbitmq:4.2.3'
          imagePullPolicy: IfNotPresent
          name: rabbitmq
          ports:
            - containerPort: 4369
              protocol: TCP
            - containerPort: 5671
              protocol: TCP
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15671
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
            - containerPort: 25672
              protocol: TCP
          volumeMounts:
            - name: configuration
              mountPath: /bitnami/rabbitmq/conf
      volumes:
        - name: configuration
          configMap:
            name: rabbitmq-config
            items:
              - key: rabbitmq.conf
                path: rabbitmq.conf
      restartPolicy: Always
