middleware/rabbitmq/manifests/k8s-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 4369
      protocol: TCP
      name: 4369-tcp

    - port: 5671
      protocol: TCP
      name: 5671-tcp

    - port: 5672
      protocol: TCP
      name: 5672-tcp

    - port: 15672
      protocol: TCP
      name: 15672-tcp

    - port: 25672
      protocol: TCP
      name: 25672-tcp
