middleware/rabbitmq/manifests/k8s-rabbitmq-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: rabbitmq
  name:  rabbitmq-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.localtest.me
      http:
        paths:
          - backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
            path: /
            pathType: Prefix
